# RNApysoforms

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  codecov.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
assets/: RNA-pysoforms-logo.ai
source/: changelog.rst  conf.py  functions.rst  index.rst  modules.rst  requirements.txt  test_imports.rst
source/_autosummary/: RNA_pysoforms.gene_filtering.rst  RNA_pysoforms.make_traces.rst  RNA_pysoforms.read_counts_matrix.rst  RNA_pysoforms.read_gtf.rst  RNA_pysoforms.set_axis.rst  RNA_pysoforms.shorten_gaps.rst  RNA_pysoforms.to_intron.rst  pytranscript.make_traces.rst  pytranscript.read_gtf.rst  pytranscript.set_axis.rst  pytranscript.shorten_gaps.rst  pytranscript.to_intron.rst
source/_static/: custom.css
source/examples/: 0.basic_usage.html  0.basic_usage.ipynb  01.rescaled_introns.html  01.rescaled_introns.ipynb  02.expression_plot.html  02.expression_plot.ipynb  03.expression_plot_with_metadata.html  03.expression_plot_with_metadata.ipynb  04.expression_plot_filtered_and_ordered.html  04.expression_plot_filtered_and_ordered.ipynb  05.plot_specific_transcripts.html  05.plot_specific_transcripts.ipynb  06.custom_color_palettes.html  06.custom_color_palettes.ipynb  07.custom_color_maps.html  07.custom_color_maps.ipynb  08.separate_CDS_interactivity.html  08.separate_CDS_interactivity.ipynb  09.autoscale_plots.html  09.autoscale_plots.ipynb  10.dealing_with_different_gtf_files.html  10.dealing_with_different_gtf_files.ipynb  11.making_expression_plot_only.html  11.making_expression_plot_only.ipynb  12.making_changes_to_figure_after_rendering.html  12.making_changes_to_figure_after_rendering.ipynb  12.making_changes_to_figure_after_rendeting.ipynb  13.making_violin_expression_plots.ipynb  14.using_transcript_name_instead_of_transcript_id.ipynb  15.saving_plots.ipynb  basic_usage.py
src/RNA_pysoforms/: __init__.py  gene_filtering.py  read_counts_matrix.py  set_axis.py  to_intron.py  utils.py
src/RNApysoforms/: __init__.py  calculate_exon_number.py  gene_filtering.py  make_plot.py  make_traces.py  make_transcript_expression_traces.py  make_transcript_structure_traces.py  read_counts_matrix.py  read_ensembl_gtf.py  read_expression_matrix.py  read_gtf.py  set_axis.py  shorten_gaps.py  to_intron.py  utils.py
src/plotly_ggtranscript/: rescale_cds.py  set_axis.py  shorten_gaps.py  to_intron.py  utils.py
src/pytranscript/: __init__.py  calculate_cds_exon_difference.py  gene_filtering.py  geom_intron.py  geom_range.py  load_counts_matrix.py  make_traces.py  read_gtf.py  set_axis.py  (+3 more)
test_scripts/: clean_test_data.py  pytranscript_tests.py  test.py  test_load_gtf.py  utils_test.py
(+25 files in other folders)
