[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytranscript"
version = "0.1"
description = "A Plotly-based Python implementation of ggtranscript-like functionality"
readme = "README.md"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["plotly", "ggtranscript", "bioinformatics"]
dependencies = [
    "pandas",
    "numpy",
    "plotly",
    "polars",
    "pyarrow",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/UK-SBCoA-EbbertLab/pytranscript"

[tool.setuptools]
package-dir = {"" = "src"}