[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rna-pysoforms"
version = "0.1.0-dev"
description = "A Plotly-based Python implementation of ggtranscript-like functionality for vizualizing RNA isoform structure and expression."
readme = "README.md"
authors = [{name = "Your Name", email = "bernardo.aguzzoli@gmail.com"}]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["plotly", "ggtranscript", "bioinformatics"]
dependencies = [
    "plotly",
    "polars",
    "pyarrow",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/UK-SBCoA-EbbertLab/rna-pysoforms"

[tool.setuptools]
package-dir = {"" = "src"}