[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RNApysoforms"
version = "0.1.0-dev"
description = "A Plotly-and-Polars-based Python implementation of ggtranscript-like functionality for vizualizing RNA isoform structure and expression."
readme = "README.md"
authors = [{name = "Your Name", email = "bernardo.aguzzoli@gmail.com"}]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["plotly", "RNA isoforms", "transcripts", "ggtranscript", "bioinformatics", "genomics"]

dependencies = [

    "plotly>=5.0,<6.0",
    "polars[excel]>=1.0,<2.0",
    "pyarrow>=17.0,<18.0",
    "pandas>=1.3,<3.0",
]

requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/UK-SBCoA-EbbertLab/RNApysoforms"

[tool.setuptools]
package-dir = {"" = "src"}